--- a/app/config/liip_imagine.yml
+++ b/app/config/liip_imagine.yml
@@ -8,3 +8,7 @@ liip_imagine:
       quality: 100
       filters:
         thumbnail: { size: [300, 300], mode: outbound }
+    show_thumb:
+      quality: 100
+      filters:
+        thumbnail: { size: [100, 100], mode: outbound }
