--- a/app/config/vich.yml
+++ b/app/config/vich.yml
@@ -2,6 +2,6 @@ vich_uploader:
     db_driver: orm
     mappings:
         site_image:
-            uri_prefix: %app.path.full.site_images%
-            upload_destination: %kernel.root_dir%/../web%app.path.site_images%
+            uri_prefix: %app.path.site_images%
+            upload_destination: %kernel.root_dir%/../web/%app.path.site_images%
             namer: vich_uploader.namer_uniqid
