--- a/app/config/liip_imagine.yml
+++ b/app/config/liip_imagine.yml
@@ -4,11 +4,13 @@ liip_imagine:
       web_path: ~
   filter_sets:
     cache: ~
-    index_thumb:
+    site_300:
       quality: 100
       filters:
         thumbnail: { size: [300, 300], mode: outbound }
-    show_thumb:
+    site_100:
       quality: 100
       filters:
         thumbnail: { size: [100, 100], mode: outbound }
+    site_full:
+      quality: 100
