vich need separate config for prod and dev

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: config.yml }
     - { resource: security_prod.yml }
+    - { resource: vich_prod.yml }
 
 #framework:
 #    validation:
