--- a/app/config/vich_prod.yml
+++ b/app/config/vich_prod.yml
@@ -2,6 +2,6 @@ vich_uploader:
     db_driver: orm
     mappings:
         site_image:
-            uri_prefix: /pilgrims/uploads/images/sites
+            uri_prefix: /uploads/images/sites
             upload_destination: %kernel.root_dir%/../web/uploads/images/sites
             namer: vich_uploader.namer_uniqid
