--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: services.yml }
+    - { resource: vich.yml }
     - { resource: liip_imagine.yml }
     - { resource: admin/ }
 
