--- a/app/config/vich.yml
+++ b/app/config/vich.yml
@@ -2,6 +2,6 @@ vich_uploader:
     db_driver: orm
     mappings:
         uploads:
-            uri_prefix: /uploads
+            uri_prefix: uploads
             upload_destination: %kernel.root_dir%/../web/uploads
             namer: vich_uploader.namer_uniqid
