--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "node-sass": "^4.9.3",
     "popper.js": "^1.14.4",
     "sass-loader": "^7.1.0"
+  },
+  "dependencies": {
+    "mapbox-gl": "^0.50.0-beta.1"
   }
 }
